--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-image: linear-gradient(#588157,#DAD7CD)
+}
 table, tr, td{
     border: 2px solid black;
     border-color: black;
@@ -18,6 +21,7 @@ h1{
 .headpic{
     width: 100%;
     height: 250px;
+    border-radius: 10px;
 }
 h2{
     font-family: sans-serif;
